--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,11 @@
-{}
+{
+  "promptDelete": false,
+  "alwaysUpdateLinks": true,
+  "showLineNumber": true,
+  "vimMode": true,
+  "fileSortOrder": "byModifiedTime",
+  "spellcheck": false,
+  "readableLineLength": false,
+  "strictLineBreaks": false,
+  "showInlineTitle": true
+}
