added Metric space stuff

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
-  "baseFontSize": 30,
-  "theme": "moonstone",
+  "baseFontSize": 21,
+  "theme": "obsidian",
   "translucency": false,
   "cssTheme": "",
   "enabledCssSnippets": [],
