--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "#52c2ff",
-  "baseFontSize": 28,
-  "theme": "moonstone",
+  "baseFontSize": 18,
+  "theme": "obsidian",
   "cssTheme": "Minimal"
 }
